# substradix-bn

./: .gitignore  Cargo.toml  ecc.py  lib.rs
src/: arith.rs  lib.rs  main.rs
src/fields/: fp.rs  fq12.rs  fq2.rs  fq6.rs  mod.rs
src/groups/: mod.rs  tests.rs
