[package]
name = "substradix-bn"
version = "0.4.3"
edition = "2022"
authors = ["Ethan Tran <ethantran.et77@gmail.com>"]
description = "Pairing cryptography with the Barreto-Naehrig curve"
keywords = ["pairing","crypto","cryptography"]
readme = "README.md"
homepage = "https://github.com/quwin/substradix-bn"
repository = "https://github.com/quwin/substradix-bn"
license = "MIT OR Apache-2.0"

[[bench]]
name = "api"

[dependencies]
byteorder = "~0.5.3"

[dev-dependencies.bincode]
version = "~0.6.0"
default-features = false
features = ["rustc-serialize"]