[package]
name = "substradix-bn"
version = "0.4.3"
edition = "2021"
authors = ["Ethan Tran <ethantran.et77@gmail.com>"]
description = "Pairing cryptography with the Barreto-Naehrig curve"
keywords = ["pairing","crypto","cryptography"]
readme = "README.md"
homepage = "https://github.com/quwin/substradix-bn"
repository = "https://github.com/quwin/substradix-bn"
license = "MIT OR Apache-2.0"

[[bench]]
name = "api"

[dependencies]
rand = "0.8.5"
byteorder = { version = "1.0", features = ["i128"], default-features = false }
crunchy = "0.2.1"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
rustc-hex = { version = "2", default-features = false }


[dev-dependencies.bincode]
version = "~0.6.0"
default-features = false
features = ["rustc-serialize"]